# ensen

./: AUTHORS  NEWS  README.md  TODO  config.ini  cov  data.in  data.out  meson.build  meson_options.txt  rc  rm  rr  rt  run  sonar-project.properties  ts  up
.github/workflows/: sonar_build.yml
doc/: Doxyfile.in  foot.html  head.html  main.dox  main.scd  meson.build
doc_dox/: doc.css  head.html
doc_scd/: meson.build
doc_scd/website/: index.html  meson.build  muon_ci.html
examples/: meson.build
examples/fftw/: main.c  makefile  util.h
examples/gnuplot/: main.c  meson.build
examples/gnuplot_by_script/: run.gpl
examples/gnuplot_i/: anim.c  example.c  meson.build  sinepng.c
examples/math_fft/: app.c  input_data.txt  meson.build  output_to_compare.txt
examples/peaksearch/: calibrate.c  cmdlex.c  cmdparse.h  main.c  meson.build  peakfit.c  plotdata.c  printdata.c
examples/peaksearch_by_finkel/: signal_peaksearch.c  signal_peaksearch.h  signal_peaksearch_commands.h  signal_peaksearch_common.h
examples/plot_sdl/: meson.build  plot_sdl.c
po/: POTFILES-UPDATE.sh  ensen.pot  meson.build  ru.po
scripts/: coverage  project_version_autoinc.sh  recompile  recompile.sh  recompile_and_run.sh  rr  run_tests  run_tests.sh  timestamp  update_po.sh
src/include/: Ensen.h  ensen.h  ensen_config.h  ensen_math.h  ensen_math_fftw_utils.h  ensen_math_random.h  ensen_math_random_noise.h  ensen_private.h  ensen_signal.h  ensen_signal_fit.h  ensen_signal_form_gaussian.h  ensen_signal_generator.h  ensen_ui.h  ensen_ui_gnuplot.h  fftw_utils.h  math_fft.h  math_fft_bithacks.h  math_fft_complex.h  math_random.h  math_random_noise.h  meson.build  signal_data.h  signal_fit.h  signal_form_gaussian.h  signal_form_random.h  signal_generator.h  signal_peaksearch.h  ui_gnuplot.h  ui_nuklear.h  ui_sdl_llist.h  ui_sdl_plot.h
src/lib/: ensen_private.h  meson.build
src/lib/config/: config.c  dictionary.c  ensen_config_dictionary.h  meson.build
src/lib/math/: ensen_math.h  meson.build
src/lib/math/fft/: bithacks.c  complex.c  fft.c  meson.build
src/lib/math/random/: ensen_math_random.h  ensen_math_random_noise.h  meson.build  random_mt19937ar.c  random_mt19937ar_cok.c  random_noise.c  random_range.c
src/lib/mem/: atomic_ops.h  atomic_ops_ext.h  atomic_ops_unix.h  atomic_ops_utils.h  ensen_mem_guarded.h  leak_detector.cc  mallocn.c  mallocn_guarded_impl.c  mallocn_inline.h  mallocn_intern.h  mallocn_lockfree_impl.c  memory_usage.cc  meson.build
src/lib/mem_s/: meson.build  safe_lib.h  safe_mem_lib.h  safeclib_private.h
src/lib/safe/: s_strlen.c
src/lib/signal/: benchmark.c  ensen_benchmark.h  ensen_signal_fit.h  ensen_signal_form_random.h  ensen_signal_generator.h  meson.build  signal_fit.c  signal_form_gaussian.c  signal_form_random.c  signal_generator.c  signal_peaksearch.c
src/lib/signal/peaksearch/: calibrate.c  cmdlex.c  cmdparse.c  cmdparse.h  commands.h  common.h  loaddata.c  main.c  meson.build  peakfit.c  plotdata.c  printdata.c
src/lib/str/: abort_handler_s.c  ignore_handler_s.c  meson.build  printf_s.c  safe_lib.h  safe_str_constraint.h  safe_str_lib.h  safeclib_private.h  snprintf_s.h  snprintf_support.c  strlen_s.c
src/lib/ui/: ensen_ui.h  meson.build
src/lib/ui/gnuplot/: gnuplot_i.c  meson.build
src/lib/ui/python/: plot.py
src/lib/ui/sdl/: llist.c  meson.build  plot.c
src/tests/: check_common.h  meson.build
src/tests/test_math/: meson.build  random_color.c  random_noise.c  test_math.c  test_math.h
