option('man-pages',
    type: 'feature',
    value: 'auto',
    description: 'generate and install man pages (default=false)'
)
option('nls',
    type: 'boolean',
    value: false,
    description: 'enable localization (default=false)'
)

option('build-tests',
    type: 'boolean',
    value: false,
    description: 'build tests (default=false)'
)

option('build-examples',
    type: 'boolean',
    value: false,
    description: 'build examples (default=false)'
)

option('ui-backend',
  type : 'combo',
  choices : ['gnuplot', 'efl', 'sdl', 'nuklear', 'plplot', 'python'],
  value : 'gnuplot',
  description : 'Graphical output backend'
)
