option('man-pages',
    type: 'feature',
    value: 'auto',
    description: 'generate and install man pages (default=false)'
)

option('nls',
    type: 'boolean',
    value: true,
    description: 'enable localization (default=false)'
)

option('memguard',
    type: 'boolean',
    value: true,
    description: 'use internal guarded memory allocator (default=false)'
)

option('debug-conf',
    type: 'boolean',
    value: false,
    description: 'show configuration setup debug info (default=false)'
)

option('tests',
    type: 'boolean',
    value: true,
    description: 'build tests (default=false)'
)

option('examples',
    type: 'boolean',
    value: false,
    description: 'build examples (default=false)'
)

option('ui-backend',
  type : 'combo',
  choices : ['gnuplot', 'efl', 'sdl', 'nuklear', 'plplot', 'python'],
  value : 'gnuplot',
  description : 'Graphical output backend'
)

option('random',
  type : 'combo',
  choices : ['std', 'mt'],
  value : 'std',
  description : 'Choose method to generate random numbers (default=std)'
)
