ensen_header_src = files([
   'signal_data.h',
   'ui_gnuplot.h',
   'ui_sdl_llist.h',
   'ui_nuklear.h',
   'ui_sdl_plot.h',
   'math_fft_bithacks.h',
   'math_fft.h',
   'math_fft_complex.h',
   'math_random.h',
   'signal_form_random.h',
   'signal_form_gaussian.h',
   'signal_generator.h',
   'signal_peaksearch.h',
   'ensen_signal.h',
   'ensen_math.h', 
])

install_headers(ensen_header_src,
  install_dir : dir_pkginclude + '-' + v_maj
)
