ensen_header_src = files([
   'ensen_signal.h',
   'ensen_math.h',
   'ensen_config_dictionary.h',
   'ensen_config.h',
   'ensen_ui.h',
   'ensen_private.h', 
   'math_fftw_utils.h'
   'math_random.h',
   'signal_data.h',
   'signal_form_random.h',
   'signal_form_gaussian.h',
   'signal_generator.h',
   'ui_gnuplot.h',
])

install_headers(ensen_header_src,
  install_dir : dir_pkginclude + '-' + v_maj
)
