ensen_header_src = files([
   'ensen_benchmark.h', 
   'ensen_signal.h',
   'ensen_math.h',
   'ensen_config_dictionary.h',
   'ensen_config.h',
   'ensen_ui.h',
   'ensen_private.h', 
   'ensen_math_fftw_utils.h'
   'ensen_math_random.h',
   'ensen_signal_form_random.h',
   'ensen_signal_form_gaussian.h',
   'ensen_signal_generator.h',
   'ensen_ui_gnuplot.h',
])

install_headers(ensen_header_src,
  install_dir : dir_pkginclude + '-' + v_maj
)
