ensen_lib_header_src += [
   'signal/ensen_benchmark.h',
   'signal/ensen_signal_fit.h',
   'signal/ensen_signal_form_gaussian.h',
   'signal/ensen_signal_form_random.h',
   'signal/ensen_signal_generator.h',
   'signal/ensen_signal.h',
]

ensen_lib_src += files([
   'signal_fit.c',
   'signal_form_gaussian.c',
   'signal_form_random.c',
   'signal_generator.c',
])