ensen_lib_header_src += [
  'str/safe_lib_errno.h',  
  'str/safe_lib.h',
  'str/safe_str_lib.h',
  'str/safe_types.h',
  'str/snprintf_s.h',
]

ensen_lib_src += files([
  'abort_handler_s.c',
  'ignore_handler_s.c',
  'safe_str_constraint.c',
  'strcpy_s.c',
  'strncpy_s.c',
  'strlen_s.c',
  'strnlen_s.c',
  'snprintf_support.c',
  'strcmp_s.c',
])

