if get_option('ui-backend') == 'gnuplot'
  subdir('gnuplot')
elif get_option('ui-backend') == 'sdl'
  # subdir('sdl')
elif get_option('ui-backend') == 'python'
  # subdir('python')
elif get_option('ui-backend') == 'plplot'
  # subdir('plplot')
elif get_option('ui-backend') == 'nuklear'
  # subdir('nuklear')
elif get_option('ui-backend') == 'efl'
  # subdir('efl')
endif
